--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@ body {
 }
 
 h1 {
-  padding-top: 150px;
   text-align: center;
-  font-family: fantasy;
+  font-family: Arial, Helvetica, sans-serif;
   color: #fc2e5a;
 }
 
